18538
SI-1735-style static forwarders do not appear to be created for methods added to the companion by a case class.

{code:title=CaseStaticForwarders.scala}
package com.nocandysw

case class Blah(a: Int)

object Blah {
  def apply2(a: Int) = apply(a)
}
{code}

{code:title=CSF.java}
package com.nocandysw;

public final class CSF {
  void blah() {
    Blah x = Blah.apply2(1);
    //Blah y = Blah.apply(1);
    Blah z = Blah$.MODULE$.apply(1);
  }
}
{code}

Uncomment the {{Blah y}} definition and you get

{code}
CSF.java:6: error: cannot find symbol
    Blah y = Blah.apply(1);
                  ^
{code}

Likewise with {{unapply}}.
